Day 6: Custom Customs - part one

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,3 +31,7 @@ path = "src/04_passport_processing.rs"
 [[bin]]
 name = "05_binary_boarding"
 path = "src/05_binary_boarding.rs"
+
+[[bin]]
+name = "06_custom_customs"
+path = "src/06_custom_customs.rs"
