--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,10 +6,15 @@ edition = "2018"
 
 [dependencies]
 anyhow = "1.0.34"
-scan-rules = "0.2.0"
 maplit = "1.0.2"
 multiset = "0.0.5"
 regex = "1.4.2"
+itertools = "0.9.0"
+
+[dependencies.scan-rules]
+version = "0.2.0"
+features = ["regex"]
+
 
 [[bin]]
 name = "01_report_repair"
@@ -35,3 +40,7 @@ path = "src/05_binary_boarding.rs"
 [[bin]]
 name = "06_custom_customs"
 path = "src/06_custom_customs.rs"
+
+[[bin]]
+name = "07_handy_haversacks"
+path = "src/07_handy_haversacks.rs"
