Day 9: Encoding Error - part one

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -48,3 +48,7 @@ path = "src/07_handy_haversacks.rs"
 [[bin]]
 name = "08_handheld_halting"
 path = "src/08_handheld_halting.rs"
+
+[[bin]]
+name = "09_encoding_error"
+path = "src/09_encoding_error.rs"
