--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ maplit = "1.0.2"
 multiset = "0.0.5"
 regex = "1.4.2"
 itertools = "0.9.0"
+modinverse = "0.1.1"
 
 [dependencies.scan-rules]
 version = "0.2.0"
